--- a/Simple Chatty Bot/Learning numbers/task-info.yaml
+++ b/Simple Chatty Bot/Learning numbers/task-info.yaml
@@ -96,5 +96,8 @@ files:
     print('Completed, have a nice day!')
   learner_created: false
 feedback_link: https://hyperskill.org/projects/97/stages/537/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 13 Apr 2021 05:37:32 UTC
+record: 4
