--- a/Simple Chatty Bot/Chatty Bot welcomes you/task-info.yaml
+++ b/Simple Chatty Bot/Chatty Bot welcomes you/task-info.yaml
@@ -44,5 +44,8 @@ files:
     # write your code here
   learner_created: false
 feedback_link: https://hyperskill.org/projects/97/stages/534/implement#comment
-status: Failed
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 12 Apr 2021 06:35:10 UTC
 record: 1
