--- a/Simple Chatty Bot/Guess the age/task-info.yaml
+++ b/Simple Chatty Bot/Guess the age/task-info.yaml
@@ -73,5 +73,8 @@ files:
     print("Your age is {your_age}; that's a good time to start programming!")
   learner_created: false
 feedback_link: https://hyperskill.org/projects/97/stages/536/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 12 Apr 2021 06:42:22 UTC
+record: 3
