--- a/Simple Chatty Bot/Multiple choice/task-info.yaml
+++ b/Simple Chatty Bot/Multiple choice/task-info.yaml
@@ -134,5 +134,8 @@ files:
     end()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/97/stages/538/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 14 Apr 2021 18:15:58 UTC
 record: -1
