--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/308735/additional_files.json
   is_template_based: true
   use_ide: true
-update_date: Tue, 13 Apr 2021 05:13:33 UTC
+update_date: Wed, 14 Apr 2021 16:49:49 UTC
 stages:
 - id: 534
   step: 8799
@@ -19,7 +19,7 @@ stages:
   is_completed: true
 - id: 538
   step: 8803
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Introduction to Python
